Fix horizontal projects timeline line vertical alignment to connect with dots

--- a/style.css
+++ b/style.css
@@ -900,7 +900,7 @@ header.navbar.scrolled {
 
 .timeline-horizontal-line {
     position: absolute;
-    top: 35px;
+    top: -48px;
     left: 180px;
     right: 180px;
     height: 2px;
